--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 "description": "serverless wordpress",
 	"scripts": {
-		"build": "diy-pwa build ",
+		"build": "diy-pwa build UX221-Assignment-4",
 		"build:cloudflare": "diy-pwa build",
-		"preview": "diy-pwa preview "
+		"preview": "diy-pwa preview UX221-Assignment-4"
 	},
 	"devDependencies": {
 		"diy-pwa": "latest"
